--- a/Pandas/Python_para_Data_Science_Pandas.ipynb
+++ b/Pandas/Python_para_Data_Science_Pandas.ipynb
@@ -1379,7 +1379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 1,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1389,16 +1389,16 @@
         {
           "data": {
             "text/plain": [
-              "['Jetta Variant', 'Passat', 'Crossfox']"
+              "['Jetta Variant', 'Passat', 'Crossfox', 'Palio']"
             ]
           },
-          "execution_count": 83,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "carros = ['Jetta Variant', 'Passat', 'Crossfox']\n",
+        "carros = ['Jetta Variant', 'Passat', 'Crossfox', 'Palio']\n",
         "carros"
       ]
     },
