--- a/Trilha_Python_Data_Science/python_data_science_02.ipynb
+++ b/Trilha_Python_Data_Science/python_data_science_02.ipynb
@@ -1073,24 +1073,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 3,
       "metadata": {
         "id": "4EjJD3w3lbzJ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "10.5"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Comparando uma função de qualitativo no formato de função para função anônima\n"
+        "# Comparando uma função de qualitativo no formato de função para função anônima\n",
+        "nota = float(input(\"Digite a nota do(a) estudante\"))\n",
+        "\n",
+        "def qualitativo (x):\n",
+        "    return x + 0.5\n",
+        "qualitativo(nota)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 4,
       "metadata": {
         "id": "vZjaUmaJFp3D"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2.5"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Testando a mesma função para uma função lambda\n"
+        "# Testando a mesma função para uma função lambda\n",
+        "nota = float(input(\"Digite a nota do(a) estudante\"))\n",
+        "qualitativo = lambda x: x + 0.5\n",
+        "qualitativo(nota)"
       ]
     },
     {
@@ -1104,7 +1134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1116,10 +1146,10 @@
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "2.0"
             ]
           },
-          "execution_count": 44,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1130,28 +1160,29 @@
         "N2 = float(input(\"Digite a 2ª nota do(a) estudante: \"))\n",
         "N3 = float(input(\"Digite a 3ª nota do(a) estudante: \"))\n",
         "\n",
-        "..."
+        "media_ponderada = lambda x, y, z: (x * 3 + y * 2 + z * 5) / 10\n",
+        "media_estudante = media_ponderada (N1, N2, N3)\n",
+        "media_estudante"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 7,
       "metadata": {
         "id": "Ek1s_FkjkQrW"
       },
       "outputs": [
         {
-          "ename": "SyntaxError",
-          "evalue": "f-string: valid expression required before '}' (3630193528.py, line 2)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;36m  Cell \u001b[1;32mIn[45], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f'O(a) estudante atingiu uma média de {}')\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m f-string: valid expression required before '}'\n"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "O(a) estudante atingiu uma média de 2.0\n"
           ]
         }
       ],
       "source": [
         "# Exibindo a média\n",
-        "print(f'O(a) estudante atingiu uma média de {}')"
+        "print(f'O(a) estudante atingiu uma média de {media_estudante}')"
       ]
     },
     {
@@ -1188,7 +1219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "RdoaWhuVI_OB"
       },
@@ -1201,33 +1232,257 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "nC6zW89lHI4K"
       },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "iM2jXtC8m1zc"
-      },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "can only concatenate list (not \"float\") to list",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m notas_atualizadas \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: x \u001b[38;5;241m+\u001b[39m qualitativo\n\u001b[1;32m----> 2\u001b[0m \u001b[43mnotas_atualizadas\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mnotas\u001b[49m\u001b[43m)\u001b[49m\n",
+            "Cell \u001b[1;32mIn[9], line 1\u001b[0m, in \u001b[0;36m<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[1;32m----> 1\u001b[0m notas_atualizadas \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mqualitativo\u001b[49m\n\u001b[0;32m      2\u001b[0m notas_atualizadas (notas)\n",
+            "\u001b[1;31mTypeError\u001b[0m: can only concatenate list (not \"float\") to list"
+          ]
+        }
+      ],
       "source": [
-        "# Não conseguimos aplicar o lambda em listas direto, é necessário\n",
-        "# utilizarmos junto a ela a função map\n"
+        "notas_atualizadas = lambda x: x + qualitativo\n",
+        "notas_atualizadas (notas)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
+      "metadata": {
+        "id": "iM2jXtC8m1zc"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[6.5, 7.5, 9.5, 6.0, 8.5]"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Não conseguimos aplicar o lambda em listas direto, é necessário\n",
+        "# utilizarmos junto a ela a função map\n",
+        "notas_atualizadas = map(lambda x: x + qualitativo, notas)\n",
+        "notas_atualizadas = list(notas_atualizadas)  # Convertendo o objeto map para uma lista\n",
+        "notas_atualizadas"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
       "metadata": {
         "id": "dAq9-TNTm1wf"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[32.0, 77.0, 98.6, 172.4, 212.0]"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#Na aula de programação, a aluna Millena recebeu uma tarefa para converter uma lista de temperaturas de graus Celsius para Fahrenheit. Pesquisando sobre como realizar a conversão ela notou \n",
+        "# que era possível criar uma função lambda para converter as temperaturas, mas precisaria utilizar a função embutida map()para auxiliá-la na conversão elemento a elemento.\n",
+        "temp_celsius = [0, 25, 37, 78, 100]\n",
+        "\n",
+        "# temp_fahrenheit = temp_celsius * 9/5 + 32\n",
+        "\n",
+        "temp_fahrenheit = list(map(lambda x: ((x * 9/5) + 32), temp_celsius))\n",
+        "temp_fahrenheit"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A lista possui 17 números em que o maior número é 99 e o menor número é 11. A soma dos valores presentes na lista é 743\n"
+          ]
+        }
+      ],
+      "source": [
+        "# A leitura do tamanho da lista\n",
+        "# A leitura do maior e menor valor\n",
+        "# A soma dos valores da lista\n",
+        "\n",
+        "lista = [16, 14, 63, 65, 17, 99, 70, 11, 20, 48, 79, 32, 17, 89, 12, 25, 66]\n",
+        "\n",
+        "tamanho = len(lista)\n",
+        "maior = max(lista)\n",
+        "menor = min(lista)\n",
+        "soma = sum(lista)\n",
+        "\n",
+        "print(f\"A lista possui {tamanho} números em que o maior número é {maior} e o menor número é {menor}. A soma dos valores presentes na lista é {soma}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "9\n",
+            "18\n",
+            "27\n",
+            "36\n",
+            "45\n",
+            "54\n",
+            "63\n",
+            "72\n",
+            "81\n",
+            "90\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 2. Escreva uma função que \n",
+        "# gere a tabuada de um número inteiro de 1 a 10, de acordo com a escolha da pessoa usuária. Como exemplo, para o número 7, a tabuada deve ser mostrada no seguinte formato:\n",
+        "def tabuada (x):\n",
+        "    contador = 0\n",
+        "    while contador <= 10:\n",
+        "        tab = x * contador\n",
+        "        contador += 1\n",
+        "        print(tab)\n",
+        "        \n",
+        "\n",
+        "num_tab = int(input(\"Qual o número que deseja saber a tabuada ?\"))\n",
+        "tabuada(num_tab)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Os múltiplos de 3 são:, [24, 99]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 3. Crie a função que leia a lista abaixo e retorne uma nova lista com os múltiplos de 3:\n",
+        "lista_num = [97, 80, 94, 88, 80, 1, 16, 53, 62, 32, 24, 99]\n",
+        "\n",
+        "def mult_tres (lista_numeros):\n",
+        "    multiplos = []\n",
+        "    for numero in lista_numeros:\n",
+        "        if numero % 3 == 0:\n",
+        "            multiplos.append(numero)\n",
+        "        \n",
+        "    return multiplos\n",
+        "    \n",
+        "resultado = mult_tres(lista_num)\n",
+        "print(f\"Os múltiplos de 3 são:, {resultado}\")\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# 4. Crie uma lista dos quadrados dos números \n",
+        "# da seguinte lista [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]. Lembre-se de utilizar as funções lambda e map() para calcular o quadrado de cada elemento da lista.\n",
+        "\n",
+        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "\n",
+        "# for num in numbers:\n",
+        "#     num_quadrado = num * num\n",
+        "#     squared_numbers.append(num_quadrado)\n",
+        "# print(squared_numbers)\n",
+        "\n",
+        "list_quadrado = list(map(lambda x: (x * x), numbers))\n",
+        "list_quadrado\n",
+        "\n",
+        "\n",
+        "# temp_fahrenheit = list(map(lambda x: ((x * 9/5) + 32), temp_celsius))\n",
+        "# temp_fahrenheit\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A média das notas da manobra é: 7.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 5. Você foi contratado(a) como cientista de dados de uma associação de skate. \n",
+        "# Para analisar as notas recebidas de skatistas em algumas competições ao longo do ano, você precisa criar um código que calcula a pontuação dos(as) atletas. \n",
+        "# Para isso, o seu código deve receber 5 notas digitadas pelas pessoas juradas.\n",
+        "\n",
+        "# Para calcular a pontuação de um(a) skatista, você precisa eliminar a maior e a menor pontuação dentre as 5 notas e tirar a média das 3 notas que sobraram. \n",
+        "# Retorne a média para apresentar o text\n",
+        "from statistics import mean\n",
+        "\n",
+        "N1 = float(input(\"Digite a 1ª nota da manobra: \"))\n",
+        "N2 = float(input(\"Digite a 2ª nota da manobra: \"))\n",
+        "N3 = float(input(\"Digite a 3ª nota da manobra: \"))\n",
+        "N4 = float(input(\"Digite a 4ª nota da manobra: \"))\n",
+        "N5 = float(input(\"Digite a 5ª nota da manobra: \"))\n",
+        "\n",
+        "lista_notas = [N1, N2, N3, N4, N5]\n",
+        "maior_nota = max(lista_notas)\n",
+        "menor_nota = min(lista_notas)\n",
+        "\n",
+        "# Remove the highest and lowest scores\n",
+        "lista_notas.remove(maior_nota)\n",
+        "lista_notas.remove(menor_nota)\n",
+        "\n",
+        "# Calculate the mean of the remaining scores\n",
+        "media_notas = mean(lista_notas)\n",
+        "\n",
+        "# Print the result\n",
+        "print(f\"A média das notas da manobra é: {media_notas:.1f}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1443,7 +1698,7 @@
         "\n",
         "**Dica:** Utilize o formato:\n",
         "```python\n",
-        "[exressão for item in lista]\n",
+        "[expressão for item in lista]\n",
         "```"
       ]
     },
