Mais exercicios de funções

--- a/Trilha_Python_Data_Science/python_data_science_02.ipynb
+++ b/Trilha_Python_Data_Science/python_data_science_02.ipynb
@@ -1485,6 +1485,94 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "O (a) estudante obteve uma média de 7.50, com a sua maior nota de 9.00 e a sua menor nota de 6.00 \n"
+          ]
+        }
+      ],
+      "source": [
+        "# 6. Para atender a uma demanda de uma instituição de ensino para a análise do desempenho de seus(suas) estudantes, você precisa criar uma função que receba uma lista de 4 notas e retorne:\n",
+        "\n",
+        "# maior nota\n",
+        "# menor nota\n",
+        "# média\n",
+        "# situação (Aprovado(a) ou Reprovado(a))\n",
+        "from statistics import mean\n",
+        "\n",
+        "N1 = float(input(\"Digite a 1ª nota : \"))\n",
+        "N2 = float(input(\"Digite a 2ª nota : \"))\n",
+        "N3 = float(input(\"Digite a 3ª nota : \"))\n",
+        "N4 = float(input(\"Digite a 4ª nota : \"))\n",
+        "\n",
+        "lista_notas = [N1, N2, N3, N4]\n",
+        "\n",
+        "def desempenho(array_notas):\n",
+        "    arr_max = max(array_notas)\n",
+        "    arr_min = min(array_notas)\n",
+        "    arr_mean = mean(array_notas)\n",
+        "    return arr_max, arr_min, arr_mean\n",
+        "\n",
+        "arr_max, arr_min, arr_mean = desempenho(lista_notas)\n",
+        "\n",
+        "print (f\"O (a) estudante obteve uma média de {arr_mean:.2f}, com a sua maior nota de {arr_max:.2f} e a sua menor nota de {arr_min:.2f} \")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['João Silva', 'Maria Souza', 'José Tavares']\n",
+            "['João Silva', 'Maria Souza', 'José Tavares']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 7. Você recebeu uma demanda para tratar 2 listas com os nomes e sobrenomes de cada estudante concatenando-as para apresentar seus nomes completos na forma Nome Sobrenome. As listas são:\n",
+        "nomes = [\"joão\", \"MaRia\", \"JOSÉ\"]\n",
+        "sobrenomes = [\"SILVA\", \"souza\", \"Tavares\"]\n",
+        "\n",
+        "def combinar_nomes (nomes, sobrenomes):\n",
+        "    nomes_completos = []\n",
+        "\n",
+        "    for nome, sobrenome in zip(nomes, sobrenomes):\n",
+        "        nome_formatado = nome.capitalize()\n",
+        "        sobrenome_formatado = sobrenome.capitalize()\n",
+        "        nome_completo = f\"{nome_formatado} {sobrenome_formatado}\"\n",
+        "        nomes_completos.append(nome_completo)\n",
+        "    return nomes_completos\n",
+        "\n",
+        "nomes_completos = combinar_nomes(nomes, sobrenomes)\n",
+        "print(nomes_completos)\n",
+        "\n",
+        "\n",
+        "#Opção com o range normal\n",
+        "def combinar_nomes_2 (nomes, sobrenomes):\n",
+        "    nomes_completos_2 = []\n",
+        "\n",
+        "    for i in range(len(nomes)):\n",
+        "        nome_formatado_2 = nomes[i].capitalize()\n",
+        "        sobrenome_formatado_2 = sobrenomes[i].capitalize()\n",
+        "        nome_completo_2 = f\"{nome_formatado_2} {sobrenome_formatado_2}\"\n",
+        "        nomes_completos_2.append(nome_completo_2)\n",
+        "    return nomes_completos_2\n",
+        "\n",
+        "nomes_completos_2 = combinar_nomes_2 (nomes, sobrenomes)\n",
+        "print(nomes_completos_2)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "DoB6wf2JCYf7"
