List Comprehension básico

--- a/Trilha_Python_Data_Science/python_data_science_02.ipynb
+++ b/Trilha_Python_Data_Science/python_data_science_02.ipynb
@@ -1526,7 +1526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1561,7 +1561,7 @@
         "def combinar_nomes_2 (nomes, sobrenomes):\n",
         "    nomes_completos_2 = []\n",
         "\n",
-        "    for i in range(len(nomes)):\n",
+        "    for i in range(len(nomes)): #Aqui estou afirmando que as duas listas são do mesmo tamanho\n",
         "        nome_formatado_2 = nomes[i].capitalize()\n",
         "        sobrenome_formatado_2 = sobrenomes[i].capitalize()\n",
         "        nome_completo_2 = f\"{nome_formatado_2} {sobrenome_formatado_2}\"\n",
@@ -1625,7 +1625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "jlEP-c2YthpB"
       },
@@ -1636,57 +1636,109 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "xP1H4Kw6uJTe"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['João', 'Maria', 'José', 'Cláudia', 'Ana']"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "nomes = []\n",
+        "notas_juntas = []\n",
+        "\n",
+        "for i in range (len(notas_turma)):\n",
+        "    if i % 4 == 0:\n",
+        "        nomes.append(notas_turma[i])\n",
+        "    else:\n",
+        "        notas_juntas.append(notas_turma[i])\n",
+        "\n",
+        "nomes\n"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "pelnQlo-v4l3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[8.0, 9.0, 10.0, 9.0, 7.0, 6.0, 3.4, 7.0, 7.0, 5.5, 6.6, 8.0, 6.0, 10.0, 9.5]"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "notas_juntas"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "61NkIzLvxXFa"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[[8.0, 9.0, 10.0],\n",
+              " [9.0, 7.0, 6.0],\n",
+              " [3.4, 7.0, 7.0],\n",
+              " [5.5, 6.6, 8.0],\n",
+              " [6.0, 10.0, 9.5]]"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#Aqui preciso agrupar de 3 em 3\n",
+        "notas_lista = []\n",
+        "\n",
+        "for i in range (0, len(notas_juntas), 3): #Começa no zero, pega o len das notas e pula de 3 em 3 posições para separar os nomes\n",
+        "    notas_lista.append([notas_juntas[i], notas_juntas[i+1], notas_juntas[i+2]])\n",
+        "notas_lista"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "eL-y49GmPpjN"
       },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "awqddIuGFf-k"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "PlDKPeCLDXU7"
-      },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "6.0"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "notas_lista[1][2]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1720,11 +1772,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "aRB0zQ2_6aa9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['João', 'Maria', 'José', 'Cláudia', 'Ana']"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "estudantes = [\"João\", \"Maria\", \"José\", \"Cláudia\", \"Ana\"]\n",
         "estudantes"
@@ -1732,7 +1795,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "wFHkckyg6aa-"
       },
@@ -1746,12 +1809,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "tZItNHeo6aa-"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[('João', 'J877'),\n",
+              " ('Maria', 'M502'),\n",
+              " ('José', 'J754'),\n",
+              " ('Cláudia', 'C112'),\n",
+              " ('Ana', 'A498')]"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "codigo_estudantes = []\n",
+        "\n",
+        "for i in range(len(estudantes)):\n",
+        "    codigo_estudantes.append((estudantes[i], estudantes[i][0] + gera_codigo()))\n",
+        "\n",
+        "codigo_estudantes"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1768,7 +1853,7 @@
         "#### Formato padrão:\n",
         "\n",
         "```python\n",
-        "[exressão for item in lista]\n",
+        "[expressão for item in lista]\n",
         "```"
       ]
     },
@@ -1792,7 +1877,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "RR5D3LvYAOUd"
       },
@@ -1803,7 +1888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "J_atQRQdlpNe"
       },
@@ -1825,12 +1910,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "G5CQqPkzQWT0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[9.0, 7.3, 5.8, 6.7, 8.5]"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "medias = [round(media(nota), 1) for nota in notas]\n",
+        "medias\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1854,7 +1953,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "WhXegkP5DDMW"
       },
@@ -1866,13 +1965,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "Lvfr10SIDSDN"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['João', 'Maria', 'José', 'Cláudia', 'Ana']"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Gerando a lista de nomes (extraindo da tupla)\n"
+        "# Gerando a lista de nomes (extraindo da tupla)\n",
+        "lista_nomes = [nome[0] for nome in nomes]\n",
+        "lista_nomes"
       ]
     },
     {
@@ -1888,12 +2000,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "TRqn0wMUg3s7"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[('João', 9.0), ('Maria', 7.3), ('José', 5.8), ('Cláudia', 6.7), ('Ana', 8.5)]"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "estudantes = list(zip(lista_nomes, medias))\n",
+        "estudantes"
+      ]
     },
     {
       "cell_type": "code",
@@ -1901,9 +2027,22 @@
       "metadata": {
         "id": "T1ocZ1G0g3qC"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['João', 'Ana']"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Gerando a lista de pessoas candidatas a bolsa\n"
+        "# Gerando a lista de pessoas candidatas a bolsa\n",
+        "candidatos = [estudante[0] for estudante in estudantes if estudante[1] >= 8.0] #Gera uma lista de estudantes somente daqueles que tiveram média maior que 8\n",
+        "candidatos"
       ]
     },
     {
@@ -1936,7 +2075,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "-QlKML-tG6FN"
       },
@@ -1953,8 +2092,23 @@
       "metadata": {
         "id": "qYgaZthjQWQV"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Aprovado(a)', 'Aprovado(a)', 'Reprovado(a)', 'Aprovado(a)', 'Aprovado(a)']"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#Situação dos estudantes com média maior ou igual a 6\n",
+        "situacao = [\"Aprovado(a)\" if media >= 6 else \"Reprovado(a)\" for media in medias]\n",
+        "situacao"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1970,12 +2124,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "G-AEgh4NGlvH"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[[('João', 'J720'),\n",
+              "  ('Maria', 'M205'),\n",
+              "  ('José', 'J371'),\n",
+              "  ('Cláudia', 'C546'),\n",
+              "  ('Ana', 'A347')],\n",
+              " [[8.0, 9.0, 10.0],\n",
+              "  [9.0, 7.0, 6.0],\n",
+              "  [3.4, 7.0, 7.0],\n",
+              "  [5.5, 6.6, 8.0],\n",
+              "  [6.0, 10.0, 9.5]],\n",
+              " [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+              " ['Aprovado(a)', 'Aprovado(a)', 'Reprovado(a)', 'Aprovado(a)', 'Aprovado(a)']]"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "cadastro = [x for x in [nomes, notas, medias, situacao]]\n",
+        "cadastro"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1988,12 +2167,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "Oz2hU80RF82D"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[[('João', 'J720'),\n",
+              "  ('Maria', 'M205'),\n",
+              "  ('José', 'J371'),\n",
+              "  ('Cláudia', 'C546'),\n",
+              "  ('Ana', 'A347')],\n",
+              " [[8.0, 9.0, 10.0],\n",
+              "  [9.0, 7.0, 6.0],\n",
+              "  [3.4, 7.0, 7.0],\n",
+              "  [5.5, 6.6, 8.0],\n",
+              "  [6.0, 10.0, 9.5]],\n",
+              " [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+              " ['Aprovado(a)', 'Aprovado(a)', 'Reprovado(a)', 'Aprovado(a)', 'Aprovado(a)']]"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "lista_completa = [nomes, notas, medias, situacao]\n",
+        "lista_completa"
+      ]
     },
     {
       "cell_type": "markdown",
