List e Dict Comprehension + Exercícios

--- a/Trilha_Python_Data_Science/python_data_science_02.ipynb
+++ b/Trilha_Python_Data_Science/python_data_science_02.ipynb
@@ -2088,7 +2088,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "qYgaZthjQWQV"
       },
@@ -2200,6 +2200,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[22.5, 24.7, 21.3, 22.9, 26.3]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Exercício IMC\n",
+        "\n",
+        "alturas = [1.70, 1.80, 1.65, 1.75, 1.90]\n",
+        "pesos = [65, 80, 58, 70, 95]\n",
+        "\n",
+        "imc = [round((peso / altura**2), 1) for altura, peso in list(zip(alturas, pesos))]\n",
+        "print(imc)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[(1.7, 65), (1.8, 80), (1.65, 58), (1.75, 70), (1.9, 95)]"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "list(zip(alturas, pesos))"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NmohhDl-QRpx"
@@ -2247,12 +2290,34 @@
       "metadata": {
         "id": "fD_TeWtOUQKQ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[[('João', 'J720'),\n",
+              "  ('Maria', 'M205'),\n",
+              "  ('José', 'J371'),\n",
+              "  ('Cláudia', 'C546'),\n",
+              "  ('Ana', 'A347')],\n",
+              " [[8.0, 9.0, 10.0],\n",
+              "  [9.0, 7.0, 6.0],\n",
+              "  [3.4, 7.0, 7.0],\n",
+              "  [5.5, 6.6, 8.0],\n",
+              "  [6.0, 10.0, 9.5]],\n",
+              " [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+              " ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']]"
+            ]
+          },
+          "execution_count": 38,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "lista_completa = [[('João', 'J720'), ('Maria', 'M205'), ('José', 'J371'), ('Cláudia', 'C546'), ('Ana', 'A347')],\n",
         "                  [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]],\n",
         "                  [9.0, 7.3, 5.8, 6.7, 8.5],\n",
-        "                  ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']]"
+        "                  ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']]\n"
       ]
     },
     {
@@ -2261,23 +2326,284 @@
       "metadata": {
         "id": "xFkmjd4EKG7b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'Notas': [[8.0, 9.0, 10.0],\n",
+              "  [9.0, 7.0, 6.0],\n",
+              "  [3.4, 7.0, 7.0],\n",
+              "  [5.5, 6.6, 8.0],\n",
+              "  [6.0, 10.0, 9.5]],\n",
+              " 'Média Final': [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+              " 'Situação': ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']}"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Colunas com os tipos dos dados (exceto nome)\n",
         "coluna = [\"Notas\", \"Média Final\", \"Situação\"]\n",
         "\n",
-        "..."
+        "cadastro = {coluna[i]:lista_completa[i+1] for i in range(len(coluna))}\n",
+        "cadastro"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "yDPfgllCKVrt"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'Notas': [[8.0, 9.0, 10.0],\n",
+              "  [9.0, 7.0, 6.0],\n",
+              "  [3.4, 7.0, 7.0],\n",
+              "  [5.5, 6.6, 8.0],\n",
+              "  [6.0, 10.0, 9.5]],\n",
+              " 'Média Final': [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+              " 'Situação': ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado'],\n",
+              " 'Estudante': ['João', 'Maria', 'José', 'Cláudia', 'Ana']}"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Vamos por fim adicionar o nome dos estudantes, extraindo apenas seus nomes da lista de tuplas\n",
+        "cadastro[\"Estudante\"] = [lista_completa[0][i][0] for i in range(len(lista_completa[0]))]\n",
+        "cadastro"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "yDPfgllCKVrt"
-      },
-      "outputs": [],
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Estudante: João, Notas: [8.0, 9.0, 10.0], Média: 9.0, Situação: Aprovado\n",
+            "Estudante: Maria, Notas: [9.0, 7.0, 6.0], Média: 7.3, Situação: Aprovado\n",
+            "Estudante: José, Notas: [3.4, 7.0, 7.0], Média: 5.8, Situação: Reprovado\n",
+            "Estudante: Cláudia, Notas: [5.5, 6.6, 8.0], Média: 6.7, Situação: Aprovado\n",
+            "Estudante: Ana, Notas: [6.0, 10.0, 9.5], Média: 8.5, Situação: Aprovado\n"
+          ]
+        }
+      ],
       "source": [
-        "# Vamos por fim adicionar o nome dos estudantes, extraindo apenas seus nomes da lista de tuplas\n"
+        "# Iterando sobre os dados e imprimindo as informações por estudante\n",
+        "for i in range(len(cadastro[\"Estudante\"])):\n",
+        "    print(f\"Estudante: {cadastro['Estudante'][i]}, Notas: {cadastro['Notas'][i]}, Média: {cadastro['Média Final'][i]}, Situação: {cadastro['Situação'][i]}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'Anthony Silveira': 9.1, 'Diana Carvalho': 10.0}"
+            ]
+          },
+          "execution_count": 50,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Exercício Alura\n",
+        "# Recebemos uma demanda da instituição de ensino do nosso projeto que nos repassou umal ista de 20 estudantes e suas respectivas médias finais.\n",
+        "# Aqui, nós precisamos selecionar estudantes que tenham média final maior ou igual a 9.0. \n",
+        "# Esses(as) estudantes serão premiados(as) com uma bolsa de estudos para o próximo ano letivo.\n",
+        "# Para filtrar os dados, temos que gerar um dicionário cujas chaves são os nomes e os valores são as médias dos(as) estudantes selecionados(as). Estes são os dados recebidos\n",
+        "# Qual dos códigos abaixo representa a forma correta de gerar o dicionário com os(as) estudantes selecionados(as)?\n",
+        "\n",
+        "nomes_estudantes = [\"Enrico Monteiro\", \"Luna Pereira\", \"Anthony Silveira\", \"Letícia Fernandes\", \n",
+        "                    \"João Vitor Nascimento\", \"Maysa Caldeira\", \"Diana Carvalho\", \"Mariane da Rosa\",\n",
+        "                    \"Camila Fernandes\", \"Levi Alves\", \"Nicolas da Rocha\", \"Amanda Novaes\", \n",
+        "                    \"Laís Moraes\", \"Letícia Oliveira\", \"Lucca Novaes\", \"Lara Cunha\", \n",
+        "                    \"Beatriz Martins\", \"João Vitor Azevedo\", \"Stephany Rosa\", \"Gustavo Henrique Lima\"]\n",
+        "\n",
+        "medias_estudantes = [5.4, 4.1, 9.1, 5.3, 6.9, 3.1, 10.0, 5.0, 8.2, 5.5,\n",
+        "                    8.1, 7.4, 5.0, 3.7, 8.1, 6.2, 6.1, 5.6, 6.7, 8.2]\n",
+        "\n",
+        "lista_avaliacao = list(zip(nomes_estudantes, medias_estudantes))\n",
+        "# lista_avaliacao\n",
+        "dict_bolsistas = {nome: media for nome,media in lista_avaliacao if media >= 9.0}\n",
+        "dict_bolsistas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Exercícios"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[24, 10, 16]"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# 1. Crie um código para imprimir a soma dos elementos de cada uma das listas contidas na seguinte lista:\n",
+        "lista_de_listas = [[4,6,5,9], [1,0,7,2], [3,4,1,8]]\n",
+        "soma_lista = []\n",
+        "\n",
+        "for i in lista_de_listas:\n",
+        "    soma_lista.append(sum(i))\n",
+        "soma_lista\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 63,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[81, 67, 83]"
+            ]
+          },
+          "execution_count": 63,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# 2. Crie um código para gerar uma lista que armazena o terceiro elemento de cada tupla contida na seguinte lista de tuplas:\n",
+        "lista_de_tuplas = [('Pedro', 1.74, 81), ('Júlia', 1.65, 67), ('Otávio', 1.81, 83)]\n",
+        "\n",
+        "peso = [i[2] for i in lista_de_tuplas]\n",
+        "peso\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 71,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[(0, 'Pedro'), (1, 'Júlia'), (2, 'Otávio'), (3, 'Eduardo')]"
+            ]
+          },
+          "execution_count": 71,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# 3. A partir da lista: lista = ['Pedro', 'Júlia', 'Otávio', 'Eduardo'], \n",
+        "# crie um código para gerar uma lista de tuplas em que cada tupla tenha o primeiro elemento como a posição do nome na lista original e o segundo elemento sendo o próprio nome.\n",
+        "lista = ['Pedro', 'Júlia', 'Otávio', 'Eduardo']\n",
+        "\n",
+        "lista_final = []\n",
+        "\n",
+        "for i in range(len(lista)):\n",
+        "    lista_final.append((i, lista[i]))\n",
+        "lista_final\n",
+        "\n",
+        "# Gerando a lista de tuplas com a posição e o nome, usando list comprehension\n",
+        "lista_final = [(i, lista[i]) for i in range(len(lista))]\n",
+        "lista_final\n",
+        "# # Exibindo o resultado\n",
+        "# print(lista_tuplas)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1700, 1400, 1900]"
+            ]
+          },
+          "execution_count": 75,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# 4. Crie uma lista usando o list comprehension que armazena somente o valor numérico de cada tupla caso o primeiro elemento seja 'Apartamento', a partir da seguinte lista de tuplas:\n",
+        "aluguel = [('Apartamento', 1700), ('Apartamento', 1400), ('Casa', 2150), ('Apartamento', 1900), ('Casa', 1100)]\n",
+        "\n",
+        "valor_ap = [i[1] for i in aluguel if i[0] == 'Apartamento']\n",
+        "valor_ap\n",
+        "\n",
+        "# [expr for item in lista if cond]\n",
+        "# situacao = [\"Aprovado(a)\" if media >= 6 else \"Reprovado(a)\" for media in medias]\n",
+        "# situacao\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 76,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'Jan': 860,\n",
+              " 'Fev': 490,\n",
+              " 'Mar': 1010,\n",
+              " 'Abr': 780,\n",
+              " 'Mai': 900,\n",
+              " 'Jun': 630,\n",
+              " 'Jul': 590,\n",
+              " 'Ago': 770,\n",
+              " 'Set': 620,\n",
+              " 'Out': 560,\n",
+              " 'Nov': 840,\n",
+              " 'Dez': 360}"
+            ]
+          },
+          "execution_count": 76,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# 5. Crie um dicionário usando o dict comprehension em que as chaves estão na lista \n",
+        "# meses = ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez']\n",
+        "# e os valores estão em despesa = [860, 490, 1010, 780, 900, 630, 590, 770, 620, 560, 840, 360].\n",
+        "\n",
+        "meses = ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez']\n",
+        "despesa = [860, 490, 1010, 780, 900, 630, 590, 770, 620, 560, 840, 360]\n",
+        "\n",
+        "dict_despesas = {mes: gasto for mes, gasto in list(zip(meses, despesa))}\n",
+        "dict_despesas\n"
       ]
     },
     {
